src/test/ui/issues/issue-18532.stderr
error[E0618]: expected function, found `!`
  --> $DIR/issue-18532.rs:16:5
   |
LL |     (return)((),()); //~ ERROR expected function, found `!`
   |     ^^^^^^^^^^^^^^^ not a function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0618`.
